2008-12-30  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Replace unknown Unicode characters with '?'
	  to avoid UnicodeEncodeError's. Also make all output strings
	  unicode.

2008-12-29  Michal Ludvig  <michal@logix.cz>

	* TODO, NEWS: Updated
	* s3cmd: Improved wildcard get.
	* run-tests.py: Improved testsuite, added parameters support
	  to run only specified tests, cleaned up win/posix integration.
	* S3/Exception.py: Python 2.4 doesn't automatically set 
	  Exception.message.

2008-12-29  Michal Ludvig  <michal@logix.cz>

	* s3cmd, run-tests.py: Make it work on Windows.

2008-12-26  Michal Ludvig  <michal@logix.cz>

	* setup.cfg: Remove explicit install prefix. That should fix
	  Mac OS X and Windows "setup.py install" runs.

2008-12-22  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/S3.py, S3/Progress.py: Display "[X of Y]"
	  in --progress mode.
	* s3cmd, S3/Config.py: Implemented recursive [get].
	  Added --skip-existing option for [get] and [sync]. 

2008-12-17  Michal Ludvig  <michal@logix.cz>

	* TODO: Updated

2008-12-14  Michal Ludvig  <michal@logix.cz>

	* S3/Progress.py: Restructured import Utils to avoid import
	  conflicts.

2008-12-12  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Better Exception output. Print sys.path on ImportError,
	  don't print backtrace on KeyboardInterrupt

2008-12-11  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Support for multiple sources in 'get' command.

2008-12-10  Michal Ludvig  <michal@logix.cz>

	* TODO: Updated list.
	* s3cmd: Don't display download/upload completed message
	  in --progress mode.
	* S3/S3.py: Pass src/dst names down to Progress class.
	* S3/Progress.py: added new class ProgressCR - apparently 
	  ProgressANSI doesn't work on MacOS-X (and perhaps elsewhere).
	* S3/Config.py: Default progress meter is now ProgressCR
	* s3cmd: Updated email address for reporting bugs.

2008-12-02  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/S3.py, NEWS: Support for (non-)recursive 'ls'
